--- a/backend/StrategyGame.Api/appsettings.json
+++ b/backend/StrategyGame.Api/appsettings.json
@@ -1,11 +1,15 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=UnderSeaDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiName": "undersea_api",
+  "ClientName": "undersea_client",
+  "ClientSecret": "undersea_client_secret",
+  "Authority": "https://"
 }
