Adding HTTPS and testing IdentityServer authentication

--- a/backend/StrategyGame.Api/appsettings.json
+++ b/backend/StrategyGame.Api/appsettings.json
@@ -11,5 +11,5 @@
   "ApiName": "undersea_api",
   "ClientName": "undersea_client",
   "ClientSecret": "undersea_client_secret",
-  "Authority": "https://"
+  "Authority": "https://localhost:44355"
 }
