--- a/backend/StrategyGame.Dal/StrategyGame.Dal.csproj
+++ b/backend/StrategyGame.Dal/StrategyGame.Dal.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StrategyGame.Model\StrategyGame.Model.csproj" />
+  </ItemGroup>
+
 </Project>
