--- a/backend/StrategyGame.Model/StrategyGame.Model.csproj
+++ b/backend/StrategyGame.Model/StrategyGame.Model.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
