--- a/backend/StrategyGame.Api/StrategyGame.Api.csproj
+++ b/backend/StrategyGame.Api/StrategyGame.Api.csproj
@@ -17,6 +17,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="NSwag.AspNetCore" Version="13.0.1" />
+    <PackageReference Include="NSwag.CodeGeneration.TypeScript" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
