Moving the DTO-s into the BLL

--- a/backend/StrategyGame.Bll/StrategyGame.Bll.csproj
+++ b/backend/StrategyGame.Bll/StrategyGame.Bll.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\StrategyGame.Model\StrategyGame.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Commands\" />
+  </ItemGroup>
+
 </Project>
