Updated formatting, small DB update (migration needed)
- Updated file formatting to match company code conventions
- Removed constructors from entities
- Added a score field to each country
- Converted KnownValues into an actual .cs file with const strings for effect names.

--- a/backend/StrategyGame.DatabaseHelper/StrategyGame.DatabaseHelper.csproj
+++ b/backend/StrategyGame.DatabaseHelper/StrategyGame.DatabaseHelper.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\StrategyGame.Bll\StrategyGame.Bll.csproj" />
     <ProjectReference Include="..\StrategyGame.Dal\StrategyGame.Dal.csproj" />
     <ProjectReference Include="..\StrategyGame.Model\StrategyGame.Model.csproj" />
   </ItemGroup>
