--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,21 @@
     "@types/node": "12.0.8",
     "@types/react": "16.8.20",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.1.0",
     "@types/react-router-dom": "^4.3.4",
     "@types/reactstrap": "^8.0.1",
     "bootstrap": "^4.3.1",
+    "connected-react-router": "^6.4.0",
+    "history": "^4.9.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0",
+    "redux": "^4.0.1",
+    "redux-saga": "^1.0.3",
     "typescript": "3.5.2"
   },
   "scripts": {
@@ -38,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/co": "^4.6.2",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
