--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@types/react-redux": "^7.1.0",
     "@types/react-router-dom": "^4.3.4",
     "@types/reactstrap": "^8.0.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "connected-react-router": "^6.4.0",
     "history": "^4.9.0",
