--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "connected-react-router": "^6.4.0",
     "history": "^4.9.0",
     "node-sass": "^4.12.0",
+    "qs": "^6.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/co": "^4.6.2",
+    "@types/qs": "^6.5.3",
     "redux-devtools-extension": "^2.13.8"
   }
 }
