--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "connected-react-router": "^6.4.0",
+    "fetch-intercept": "^2.3.1",
     "history": "^4.9.0",
     "node-sass": "^4.12.0",
     "qs": "^6.7.0",
