--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@aspnet/signalr": "^1.1.4",
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/lab": "^4.0.0-alpha.18",
     "@types/jest": "24.0.15",
     "@types/node": "12.0.8",
     "@types/react": "16.8.20",
