Fixing CORS for SignalR

--- a/backend/StrategyGame.Api/appsettings.json
+++ b/backend/StrategyGame.Api/appsettings.json
@@ -11,5 +11,8 @@
   "ApiName": "undersea_api",
   "ClientName": "undersea_client",
   "ClientSecret": "undersea_client_secret",
-  "Authority": "https://localhost:44355"
+  "Authority": "https://localhost:44355",
+  "CorsOrigins": [
+    "http://localhost:3000"
+  ]
 }
