--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^4.3.1",
     "connected-react-router": "^6.4.0",
     "fetch-intercept": "^2.3.1",
+    "form-data": "^2.5.0",
     "history": "^4.9.0",
     "node-sass": "^4.12.0",
     "qs": "^6.7.0",
